--- a/Lista 2/app/src/main/res/layout/fragment_b.xml
+++ b/Lista 2/app/src/main/res/layout/fragment_b.xml
@@ -1,26 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentB">
+    android:orientation="vertical"
+    android:padding="16dp">
 
     <TextView
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="FRAGMENT B"
-        android:textColor="@color/black"
-        android:textSize="36sp"
-        android:layout_gravity="center_horizontal"
-        android:gravity="center"/>
-
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabB"
+        android:id="@+id/registerTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:clickable="true"
-        android:src="@android:drawable/arrow_up_float"
-        android:contentDescription="FAB" />
-</FrameLayout>
+        android:text="Zarejestruj"
+        android:textSize="24sp"
+        android:layout_gravity="center_horizontal"
+        android:paddingBottom="20dp" />
+
+    <EditText
+        android:id="@+id/registerUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="login:"
+        android:padding="12dp"
+        android:backgroundTint="#000000" />
+
+    <EditText
+        android:id="@+id/registerPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="hasło:"
+        android:inputType="textPassword"
+        android:padding="12dp"
+        android:backgroundTint="#000000"
+        android:layout_marginTop="8dp" />
+
+    <EditText
+        android:id="@+id/registerConfirmPassword"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="powtórz hasło:"
+        android:inputType="textPassword"
+        android:padding="12dp"
+        android:backgroundTint="#000000"
+        android:layout_marginTop="8dp" />
+
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Zarejestruj"
+        android:layout_marginTop="16dp"
+        android:backgroundTint="#D8E4C4"
+        android:textColor="#000000" />
+
+</LinearLayout>
