--- a/Lista 3/app/src/main/res/layout/fragment_e2.xml
+++ b/Lista 3/app/src/main/res/layout/fragment_e2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="0dp">
 
     <TextView
         android:id="@+id/titleTextView"
@@ -13,7 +13,9 @@
         android:text="Moje Oceny"
         android:textSize="24sp"
         android:fontFamily="sans-serif-medium"
-        android:paddingBottom="16dp" />
+        android:paddingBottom="16dp"
+        android:textStyle="bold"
+        android:layout_gravity="center" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewTasks"
