--- a/Lista 3/app/src/main/res/layout/item_task.xml
+++ b/Lista 3/app/src/main/res/layout/item_task.xml
@@ -21,21 +21,21 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/textTaskListSubjectName"
+                android:id="@+id/textTaskName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="PUM"
+                android:text="Zadanie"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/textTaskListCounter"
+                android:id="@+id/textTaskContent"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                android:text="Liczba list: 1"
-                android:textColor="@android:color/darker_gray"
+                android:text="przykladowa tresc zadania"
+                android:textColor="@android:color/black"
                 android:textSize="14sp"
                 android:padding="5dp"/>
         </LinearLayout>
@@ -54,29 +54,17 @@
                 android:gravity="end">
 
                 <TextView
-                    android:id="@+id/textTaskListName"
+                    android:id="@+id/textTaskPoints"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="PUM"
+                    android:text="Pkt: 1"
                     android:textColor="@android:color/black"
                     android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <TextView
-                    android:id="@+id/textTaskListGrade"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="4dp"
-                    android:text="Ocena: 1"
-                    android:textColor="@android:color/darker_gray"
-                    android:textSize="14sp"
-                    android:padding="5dp"/>
             </LinearLayout>
 
         </LinearLayout>
-
-
-
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
