--- a/Lista 3/app/src/main/res/layout/fragment_e3.xml
+++ b/Lista 3/app/src/main/res/layout/fragment_e3.xml
@@ -1,51 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".E3Fragment">
+    android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="wrap_content"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorControlNormal"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        android:title="Fragment E3" />
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/subjectName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Przedmiot"
-            android:textSize="18sp"
-            android:padding="24dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            />
-
-        <TextView
-            android:id="@+id/listName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Lista X"
-            android:textSize="18sp"
-            android:padding="8dp"
-            android:textStyle="bold"
-            android:gravity="center"
-            />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="8dp"/>
-
-    </LinearLayout>
-
-</FrameLayout>
+        tools:listitem="@layout/item_task_detail" />
+</androidx.constraintlayout.widget.ConstraintLayout>
