--- a/Lista 3/app/src/main/res/menu/bottom_menu.xml
+++ b/Lista 3/app/src/main/res/menu/bottom_menu.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <!-- FragmentE1: Task List -->
     <item
-        android:id="@id/E1fragment"
-        android:icon="@drawable/baseline_library_books_24"
-        android:title="Listy zadań" />
+        android:id="@+id/fragmentE1"
+        android:icon="@drawable/ic_launcher_foreground"
+        android:title="Task List" />
+
+    <!-- FragmentE2: Grades -->
     <item
-        android:id="@id/E2fragment"
-        android:icon="@drawable/baseline_assignment_turned_in_24"
-        android:title="Oceny" />
+        android:id="@+id/fragmentE2"
+        android:icon="@drawable/ic_launcher_foreground"
+        android:title="Grades" />
+
 </menu>
