--- a/Lista 3/app/src/main/res/navigation/navigation.xml
+++ b/Lista 3/app/src/main/res/navigation/navigation.xml
@@ -2,36 +2,47 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/naviagtion"
+    android:id="@+id/navigation"
     app:startDestination="@id/fragmentE1">
 
+    <!-- Fragment E1: Task List -->
     <fragment
         android:id="@+id/fragmentE1"
-        android:name="com.example.myapplication.E1Fragment"
-        android:label="fragment_e1"
-        tools:layout="@layout/fragment_e1" >
+        android:name="com.example.pumlista3.FragmentE1"
+        android:label="Task List"
+        tools:layout="@layout/fragment_e1">
         <action
             android:id="@+id/action_fragmentE1_to_fragmentE3"
-            app:destination="@id/fragmentE3" />
+            app:destination="@id/fragmentE3">
+            <argument
+                android:name="selectedList"
+                app:argType="com.example.pumlista3.ExerciseList" />
+        </action>
+        <action
+            android:id="@+id/action_fragmentE1_to_fragmentE2"
+            app:destination="@id/fragmentE2" />
     </fragment>
+
+    <!-- Fragment E2: Grades -->
     <fragment
         android:id="@+id/fragmentE2"
-        android:name="com.example.myapplication.E2Fragment"
-        android:label="fragment_e2"
-        tools:layout="@layout/fragment_e2" />
+        android:name="com.example.pumlista3.FragmentE2"
+        android:label="Grades"
+        tools:layout="@layout/fragment_e2">
+        <action
+            android:id="@+id/action_fragmentE2_to_fragmentE1"
+            app:destination="@id/fragmentE1" />
+    </fragment>
+
+    <!-- Fragment E3: Task Detail -->
     <fragment
         android:id="@+id/fragmentE3"
-        android:name="com.example.myapplication.E3Fragment"
-        android:label="fragment_e3"
-        tools:layout="@layout/fragment_e3" >
-        <argument
-            android:name="selectedTask"
-            app:argType="integer" />
-        <action
-            android:id="@+id/action_fragmentE3_to_fragmentE2"
-            app:destination="@id/fragmentE2" />
+        android:name="com.example.pumlista3.FragmentE3"
+        android:label="Task Detail"
+        tools:layout="@layout/fragment_e3">
         <action
             android:id="@+id/action_fragmentE3_to_fragmentE1"
             app:destination="@id/fragmentE1" />
     </fragment>
+
 </navigation>
